<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_instructions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uz.androidclub.tas_ixtube.activities.InstructionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_download"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_margin="10dp"/>

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_instruction"
            android:textColor="@color/black"/>

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_favorite"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_margin="10dp"/>

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_instruction"
            android:textColor="@color/black"/>

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_delete_fav"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_margin="10dp"/>

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_instruction"
            android:textColor="@color/black"/>

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_player"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_margin="10dp"/>

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_instruction"
            android:textColor="@color/black"/>

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_help"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_margin="10dp"/>

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_instruction"
            android:textColor="@color/black"/>

    </LinearLayout>


</ScrollView>
