<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uz.androidclub.tas_ixtube.activities.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent">

            <uz.androidclub.tas_ixtube.utils.CusFntTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warning"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>



        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authors"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_margin="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/yus"
                android:contentDescription="@string/me_as_dev" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <uz.androidclub.tas_ixtube.utils.CusFntTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yusuf"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <uz.androidclub.tas_ixtube.utils.CusFntTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/yusuf_who"/>

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ars"
                android:contentDescription="@string/ars_as_dev" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <uz.androidclub.tas_ixtube.utils.CusFntTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arslan"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <uz.androidclub.tas_ixtube.utils.CusFntTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/arslan_who"/>

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tim"
                android:contentDescription="@string/timko_as_dev"
                android:onClick="forceCrash"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <uz.androidclub.tas_ixtube.utils.CusFntTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timur"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <uz.androidclub.tas_ixtube.utils.CusFntTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/timur_who"/>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</ScrollView>
