<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/activity_horizontal_margin">

    <uz.androidclub.tas_ixtube.utils.CusFntTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_add_favorite"
        android:text="@string/add_to_fav"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <uz.androidclub.tas_ixtube.utils.CusFntTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_share"
        android:text="@string/share"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <uz.androidclub.tas_ixtube.utils.CusFntTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_author"
        android:text="@string/all_author_videos"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:visibility="gone"/>
</LinearLayout>