<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uz.androidclub.tas_ixtube.activities.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/settings_padding"
            android:paddingBottom="@dimen/settings_padding"
            android:paddingStart="@dimen/settings_padding"
            android:paddingLeft="@dimen/settings_padding">

            <uz.androidclub.tas_ixtube.utils.CusFntTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/settings_font_size"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackground"/>

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_lang"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:entries="@array/lang"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/settings_padding"
            android:id="@+id/toggle_player_container"
            android:background="?attr/selectableItemBackground">

            <uz.androidclub.tas_ixtube.utils.CusFntTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_external_player"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/settings_font_size"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/toggle_player"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_search_history"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/settings_font_size"
            android:textStyle="bold"
            android:id="@+id/text_clear_search"
            android:padding="@dimen/settings_padding"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_fav"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/settings_font_size"
            android:textStyle="bold"
            android:id="@+id/text_clear_fav"
            android:padding="@dimen/settings_padding"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textColor="@color/transGray"
            android:textSize="@dimen/settings_font_size"
            android:textStyle="bold"
            android:id="@+id/text_instructions"
            android:padding="@dimen/settings_padding"
            android:layout_gravity="bottom"
            android:background="?attr/selectableItemBackground"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <uz.androidclub.tas_ixtube.utils.CusFntTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/transGray"
            android:textSize="@dimen/settings_font_size"
            android:textStyle="bold"
            android:id="@+id/text_about"
            android:padding="@dimen/settings_padding"
            android:background="?attr/selectableItemBackground"/>

    </LinearLayout>


</RelativeLayout>
